--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -14,7 +14,7 @@
 
 body {
   font-family: var(--font-roboto);
-  background-color: #212426;
+  /* background-color: #212426; */
 }
 
 .app {
@@ -28,31 +28,20 @@ body {
 
 h1 {
   font-size: 3rem;
-  letter-spacing: 0.9px;
-  background: linear-gradient(
-    90deg,
-    rgba(249, 211, 180, 1) 0%,
-    rgba(249, 211, 180, 0) 100%
-  );
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  width: fit-content;
+
 }
 
 .search {
   width: 71%;
-  margin: 4rem 0 2rem;
+  margin: 2rem 0 1rem;
 
   display: flex;
   align-items: center;
   justify-content: center;
 
-  padding: 1.5rem 1.75rem;
+  padding: 0.5rem 0.75rem;
   border-radius: 3rem;
-  background: #1f2123;
-  -webkit-box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
-  box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
+  border: #1c1d1f solid 1px;
 }
 
 .search input {
@@ -64,8 +53,6 @@ h1 {
   padding-right: 1rem;
 
   outline: none;
-  color: #a1a1a1;
-  background: #1f2123;
 }
 
 .search img {
@@ -74,20 +61,17 @@ h1 {
   cursor: pointer;
 }
 
-/* .search button {
-  padding: 20px 40px;
-  border-radius: 0.5rem;
+.search button {
+  padding: 10px 20px;
+  border-radius: 1.5rem;
   margin-left: 15px;
-  color: #a1a1a1;
+  color: #ffffff;
   font-family: var(--font-raleway);
   font-weight: 900;
-  letter-spacing: 0.75px;
   font-size: 1.25rem;
   cursor: pointer;
-  background: #1f2123;
-  -webkit-box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
-  box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
-} */
+  background-color: black;
+}
 
 .empty {
   width: 100%;
